 once created. Note: this may cause incompatibilities with existing code!
 
 - fixed bug in parsing periods
 
 - fixed bug in TimeZoneUtils for non-DST timezones
 
 - added support for removal of extraneous newlines between components in the
 default parser implementation (KOrganizer generates such files)
 
 - fixed bug in parsing free time where durations are specified
 
 
0.9.11:

 - Better support and usability for recurrence rules. (see
 extensive changes to Recur class)
 
 - Convenience constructors for components VAlarm, VEvent, VFreeBusy, VJournal,
 and VToDo should make it easier to construct standard components.
 
 - Further validation fine-tuning to ensure some properties don't occur where
 not applicable.
 
 - Fixed support for TRANSP property, which was previously being ignored by the
 CalendarBuilder.
 
 
0.9.10:

 - Model classes are now Serializable
 
 - Bug fixes related to VALARMs in VTODOs (thanks twinkle!)
 
 - Added explicit serialVersionUID for Serializable implementors.
 
 - Added use of Log.isDebugEnabled() for performance reasons.
 
 - Added WeekDay class to better represent day patterns in recurrence rules.

 
0.9.9:

 - Separated the calendar parser from the builder to allow different
 parser implementations to be used with iCal4j.
 
 - All properties are now mutable with default constructors.


0.9.8:

 - Added special character escaping and parsing. NOTE: I've provided the ability
 to escape parameter values although I am unsure it is necessary (or allowed) by
 RFC2445.
 
 - Fixed bug whereby CalendarBuilder wasn't reading quoted text correctly in all
 cases.
 

0.9.7:
 
 - Added convenience constructors to model classes (Calendar, Component, Property)
 
 - Initial design of support for RFC 2446 (transform) - NOTE: Not yet functional!
 
 - Fixed bug where builder would hang if calendar streams didn't
 contain an extra whitespace char at EOF


0.9.6:

 - Fixed bug found in some property constructors where was not checking