@@ -6,7 +6,7 @@
  
   - Heladito, Darkwave, twinkle, Outmyth, Ralph Schaer, Chris Borrill,
   Meher Tendjoukian, John Casey, Harrie Hazewinkel, Markus Rahlff,
-  Marcus Hauer..
+  Marcus Hauer, Dustin (calibre)..
  
  
  Thanks also to the developers of the following applications/libraries:
