@@ -211,6 +211,18 @@
                     </ul>
                 </td>
             </tr>
+            <tr>
+                <th>0.9.12</th>
+                <td style="width:100%">
+                    <ul>
+                        <li>Sixth alpha release</li>
+                        <li>Improved parsing of iCalendar files generated by KOrganizer</li>
+                        <li>Reimplemented some constants as typed instances</li>
+                        <li>Applied patch <a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1170060&amp;group_id=107024&amp;atid=646397">#1170060</a></li>
+                        <li>See the CHANGELOG for further details</li>
+                    </ul>
+                </td>
+            </tr>
             <tr style="color: silver">
                 <th style="white-space:nowrap">1.0 beta</th>
                 <td style="width:100%">
